--- a/src/HelloWorld/HelloWorld.scss
+++ b/src/HelloWorld/HelloWorld.scss
@@ -1,3 +1,10 @@
 .helloWorld {
-    background-color: red;
+    /*flex-box child props*/
+    margin: auto;
+    height: 20%;
+    width: 50%;
+    /*flex-box parent props*/
+    /*styling (the rest of the CSS)*/
+    background-color: blue;
 }
+
