initial layout of components

--- a/src/Header/Header.scss
+++ b/src/Header/Header.scss
@@ -1,8 +1,9 @@
-.helloWorld {
+.header {
     /*flex-box child props*/
-    margin: auto;
+    margin-left: auto;
+    margin-right: auto;
     height: 20%;
-    width: 50%;
+    width: 90%;
     /*flex-box parent props*/
     /*styling (the rest of the CSS)*/
     background-color: blue;
