--- a/src/Header/Header.scss
+++ b/src/Header/Header.scss
@@ -1,4 +1,5 @@
 .header {
+    content:url('../testAssets/wireframe-placeholder.png');
     /*flex-box child props*/
     margin-left: auto;
     margin-right: auto;
@@ -6,6 +7,5 @@
     width: 90%;
     /*flex-box parent props*/
     /*styling (the rest of the CSS)*/
-    background-color: blue;
 }
 
