--- a/src/Toolbox/global.scss
+++ b/src/Toolbox/global.scss
@@ -1,4 +1,11 @@
-/*global should only be used to override/edit global dom properties, like body or div*/
+/*global should only be for 2 things:
+    1: override/edit global dom properties, like body or div
+    2: sass variables you plan to use across the whole application, like $font-stak and $primary-color
+*/
+
+$background-color: #EEE8D5;
+$background-color-lighter: #FDF6E3;
+
 body{
     margin: 0px;
 }
