--- a/src/StoryModal/StoryModal.scss
+++ b/src/StoryModal/StoryModal.scss
@@ -1,11 +1,22 @@
-.StoriesContainer {
+.storyModal {
     /*flex-box child props*/
+    z-index: 12;
     margin-left: auto;
     margin-right: auto;
-    height: 80%;
-    width: 90%;
+    height: 100%;
+    width: 100%;
     /*flex-box parent props*/
-    display: flex;
-    flex-wrap: wrap;
     /*styling (the rest of the CSS)*/
+}
+
+.modalHeader{
+
+}
+
+.modalBody{
+
+}
+
+.modalFooter{
+
 }
