--- a/src/Header/Header.scss
+++ b/src/Header/Header.scss
@@ -1,10 +1,16 @@
+@font-face {
+    font-family: 'newyorker';
+    src: url('../assets/fonts/newyorker_engraved.tff') format('truetype');
+}
+
 .header {
-    content:url('../testAssets/wireframe-placeholder.png');
     /*flex-box child props*/
     margin-left: auto;
     margin-right: auto;
     height: 20%;
     width: 90%;
+    font-family: "newyorker";
+    font-size: 400%;
     /*flex-box parent props*/
     /*styling (the rest of the CSS)*/
 }
