starting to style

--- a/src/StoriesContainer/StoriesContainer.scss
+++ b/src/StoriesContainer/StoriesContainer.scss
@@ -4,6 +4,7 @@
     margin-right: auto;
     height: 80%;
     width: 90%;
+    margin-top: 1.5em;
     /*flex-box parent props*/
     display: flex;
     flex-wrap: wrap;
