--- a/src/StoriesContainer/StoryBox/StoryBox.scss
+++ b/src/StoriesContainer/StoryBox/StoryBox.scss
@@ -1,5 +1,5 @@
 //sass variables for this component
-$story-background-color: #FDF6E3;
+$story-background-color: white;
 $story-background-color-accent: #EEE8D5;
 $story-text-color: #657b83;
 $story-hover-color: #CCC8BC;
