--- a/src/Header/Header.scss
+++ b/src/Header/Header.scss
@@ -3,15 +3,41 @@
     src: url('../assets/fonts/newyorker_engraved.tff') format('truetype');
 }
 
-.header {
-    /*flex-box child props*/
+.main {
     margin-left: auto;
     margin-right: auto;
     height: 20%;
     width: 90%;
+    text-align: center;
+}
+
+.header {
+    /*flex-box child props*/
     font-family: "newyorker";
     font-size: 400%;
     /*flex-box parent props*/
     /*styling (the rest of the CSS)*/
 }
 
+.tiny {
+    text-align: center;
+    border-bottom: thick solid black;
+    padding-bottom: .5em;
+}
+
+.list {
+    border-bottom: thin solid grey;
+    text-decoration: none;
+    font-family: Helvetica;
+}
+
+.list li {
+    display: inline;
+    padding-right: 20px;
+}
+
+.special {
+    color: red;
+    fontsize: 150%;
+    font-weight: 700;
+}
