--- a/src/index.scss
+++ b/src/index.scss
@@ -1,7 +1,8 @@
 /*index css rules*/
 $story-background-color-accent: #EEE8D5;
+
 .appContainer {
-    background-color: $story-background-color-accent;
+    background-color: white;
     height: 100vh;
     width: 100vw;
     overflow: auto;
