--- a/src/index.scss
+++ b/src/index.scss
@@ -1,8 +1,6 @@
 /*index css rules*/
-$story-background-color-accent: #EEE8D5;
 
-.appContainer {
-    background-color: white;
+body {
     height: 100vh;
     width: 100vw;
     overflow: auto;
