--- a/src/index.scss
+++ b/src/index.scss
@@ -1,11 +1,11 @@
 /*index css rules*/
 
-body {
-    height: 100vh;
-    width: 100vw;
-    overflow: auto;
-    /*flexbox rules*/
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-}
+// body {
+//     height: 100vh;
+//     width: 100vw;
+//     overflow: auto;
+//     /*flexbox rules*/
+//     display: flex;
+//     flex-direction: row;
+//     flex-wrap: wrap;
+// }
