Adding update employee and route improvements

--- a/server/src/main/assets/stylesheets/appmain.css
+++ b/server/src/main/assets/stylesheets/appmain.css
@@ -57,7 +57,7 @@ blockquote {
     margin: 0 0 1rem; }
 
 a {
-    color: #5CB85C;
+    color: #18BC9C;
     text-decoration: none; }
 a:focus, a:hover {
     color: #3d8b3d;
@@ -1589,18 +1589,18 @@ input[type="checkbox"].disabled {
 .has-success.radio-inline label,
 .has-success.checkbox-inline label,
 .has-success .custom-control {
-    color: #5cb85c; }
+    color: #18BC9C; }
 
 .has-success .form-control {
-    border-color: #5cb85c; }
+    border-color: #18BC9C; }
 
 .has-success .input-group-addon {
-    color: #5cb85c;
-    border-color: #5cb85c;
+    color: #18BC9C;
+    border-color: #18BC9C;
     background-color: #eaf6ea; }
 
 .has-success .form-control-feedback {
-    color: #5cb85c; }
+    color: #18BC9C; }
 
 .has-success .form-control-success {
     background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3E%3Cpath fill='%235cb85c' d='M2.3 6.73L.6 4.53c-.4-1.04.46-1.4 1.1-.8l1.1 1.4 3.4-3.8c.6-.63 1.6-.27 1.2.7l-4 4.6c-.43.5-.8.4-1.1.1z'/%3E%3C/svg%3E"); }
@@ -1732,8 +1732,8 @@ fieldset[disabled] a.btn {
 
 .btn-primary {
     color: #fff;
-    background-color: #5CB85C;
-    border-color: #5CB85C; }
+    background-color: #18BC9C;
+    border-color: #18BC9C; }
 .btn-primary:hover {
     color: #fff;
     background-color: #449d44;
@@ -1756,11 +1756,11 @@ fieldset[disabled] a.btn {
     background-color: #398439;
     border-color: #2d672d; }
 .btn-primary.disabled:focus, .btn-primary.disabled.focus, .btn-primary:disabled:focus, .btn-primary:disabled.focus {
-    background-color: #5CB85C;
-    border-color: #5CB85C; }
+    background-color: #18BC9C;
+    border-color: #18BC9C; }
 .btn-primary.disabled:hover, .btn-primary:disabled:hover {
-    background-color: #5CB85C;
-    border-color: #5CB85C; }
+    background-color: #18BC9C;
+    border-color: #18BC9C; }
 
 .btn-secondary {
     color: #373a3c;
@@ -1828,8 +1828,8 @@ fieldset[disabled] a.btn {
 
 .btn-success {
     color: #fff;
-    background-color: #5cb85c;
-    border-color: #5cb85c; }
+    background-color: #18BC9C;
+    border-color: #18BC9C; }
 .btn-success:hover {
     color: #fff;
     background-color: #449d44;
@@ -1852,11 +1852,11 @@ fieldset[disabled] a.btn {
     background-color: #398439;
     border-color: #2d672d; }
 .btn-success.disabled:focus, .btn-success.disabled.focus, .btn-success:disabled:focus, .btn-success:disabled.focus {
-    background-color: #5cb85c;
-    border-color: #5cb85c; }
+    background-color: #18BC9C;
+    border-color: #18BC9C; }
 .btn-success.disabled:hover, .btn-success:disabled:hover {
-    background-color: #5cb85c;
-    border-color: #5cb85c; }
+    background-color: #18BC9C;
+    border-color: #18BC9C; }
 
 .btn-warning {
     color: #fff;
@@ -1923,23 +1923,23 @@ fieldset[disabled] a.btn {
     border-color: #B85C5C; }
 
 .btn-outline-primary {
-    color: #5CB85C;
+    color: #18BC9C;
     background-image: none;
     background-color: transparent;
-    border-color: #5CB85C; }
+    border-color: #18BC9C; }
 .btn-outline-primary:hover {
     color: #fff;
-    background-color: #5CB85C;
-    border-color: #5CB85C; }
+    background-color: #18BC9C;
+    border-color: #18BC9C; }
 .btn-outline-primary:focus, .btn-outline-primary.focus {
     color: #fff;
-    background-color: #5CB85C;
-    border-color: #5CB85C; }
+    background-color: #18BC9C;
+    border-color: #18BC9C; }
 .btn-outline-primary:active, .btn-outline-primary.active,
 .open > .btn-outline-primary.dropdown-toggle {
     color: #fff;
-    background-color: #5CB85C;
-    border-color: #5CB85C; }
+    background-color: #18BC9C;
+    border-color: #18BC9C; }
 .btn-outline-primary:active:hover, .btn-outline-primary:active:focus, .btn-outline-primary:active.focus, .btn-outline-primary.active:hover, .btn-outline-primary.active:focus, .btn-outline-primary.active.focus,
 .open > .btn-outline-primary.dropdown-toggle:hover,
 .open > .btn-outline-primary.dropdown-toggle:focus,
@@ -2013,23 +2013,23 @@ fieldset[disabled] a.btn {
     border-color: #b0e1ef; }
 
 .btn-outline-success {
-    color: #5cb85c;
+    color: #18BC9C;
     background-image: none;
     background-color: transparent;
-    border-color: #5cb85c; }
+    border-color: #18BC9C; }
 .btn-outline-success:hover {
     color: #fff;
-    background-color: #5cb85c;
-    border-color: #5cb85c; }
+    background-color: #18BC9C;
+    border-color: #18BC9C; }
 .btn-outline-success:focus, .btn-outline-success.focus {
     color: #fff;
-    background-color: #5cb85c;
-    border-color: #5cb85c; }
+    background-color: #18BC9C;
+    border-color: #18BC9C; }
 .btn-outline-success:active, .btn-outline-success.active,
 .open > .btn-outline-success.dropdown-toggle {
     color: #fff;
-    background-color: #5cb85c;
-    border-color: #5cb85c; }
+    background-color: #18BC9C;
+    border-color: #18BC9C; }
 .btn-outline-success:active:hover, .btn-outline-success:active:focus, .btn-outline-success:active.focus, .btn-outline-success.active:hover, .btn-outline-success.active:focus, .btn-outline-success.active.focus,
 .open > .btn-outline-success.dropdown-toggle:hover,
 .open > .btn-outline-success.dropdown-toggle:focus,
@@ -2104,7 +2104,7 @@ fieldset[disabled] a.btn {
 
 .btn-link {
     font-weight: normal;
-    color: #5CB85C;
+    color: #18BC9C;
     border-radius: 0; }
 .btn-link, .btn-link:active, .btn-link.active, .btn-link:disabled {
     background-color: transparent; }
@@ -2227,7 +2227,7 @@ input[type="button"].btn-block {
 .dropdown-item.active, .dropdown-item.active:focus, .dropdown-item.active:hover {
     color: #fff;
     text-decoration: none;
-    background-color: #5CB85C;
+    background-color: #18BC9C;
     outline: 0; }
 .dropdown-item.disabled, .dropdown-item.disabled:focus, .dropdown-item.disabled:hover {
     color: #818a91; }
@@ -2736,7 +2736,7 @@ input[type="button"].btn-block {
 .nav-pills .nav-item.open .nav-link:hover {
     color: #fff;
     cursor: default;
-    background-color: #5CB85C; }
+    background-color: #18BC9C; }
 
 .nav-stacked .nav-item {
     display: block;
@@ -2975,12 +2975,12 @@ input[type="button"].btn-block {
     margin-left: -0.625rem; }
 
 .card-primary {
-    background-color: #5CB85C;
-    border-color: #5CB85C; }
+    background-color: #18BC9C;
+    border-color: #18BC9C; }
 
 .card-success {
-    background-color: #5cb85c;
-    border-color: #5cb85c; }
+    background-color: #18BC9C;
+    border-color: #18BC9C; }
 
 .card-info {
     background-color: #5bc0de;
@@ -2996,7 +2996,7 @@ input[type="button"].btn-block {
 
 .card-outline-primary {
     background-color: transparent;
-    border-color: #5CB85C; }
+    border-color: #18BC9C; }
 
 .card-outline-secondary {
     background-color: transparent;
@@ -3008,7 +3008,7 @@ input[type="button"].btn-block {
 
 .card-outline-success {
     background-color: transparent;
-    border-color: #5cb85c; }
+    border-color: #18BC9C; }
 
 .card-outline-warning {
     background-color: transparent;
@@ -3152,8 +3152,8 @@ input[type="button"].btn-block {
     z-index: 2;
     color: #fff;
     cursor: default;
-    background-color: #5CB85C;
-    border-color: #5CB85C; }
+    background-color: #18BC9C;
+    border-color: #18BC9C; }
 .page-item.disabled .page-link, .page-item.disabled .page-link:focus, .page-item.disabled .page-link:hover {
     color: #818a91;
     pointer-events: none;
@@ -3166,7 +3166,7 @@ input[type="button"].btn-block {
     float: left;
     padding: 0.5rem 0.75rem;
     margin-left: -1px;
-    color: #5CB85C;
+    color: #18BC9C;
     text-decoration: none;
     background-color: #fff;
     border: 1px solid #ddd; }
@@ -3233,12 +3233,12 @@ a.tag:focus, a.tag:hover {
     background-color: #687077; }
 
 .tag-primary {
-    background-color: #5CB85C; }
+    background-color: #18BC9C; }
 .tag-primary[href]:focus, .tag-primary[href]:hover {
     background-color: #449d44; }
 
 .tag-success {
-    background-color: #5cb85c; }
+    background-color: #18BC9C; }
 .tag-success[href]:focus, .tag-success[href]:hover {
     background-color: #449d44; }
 
@@ -3422,17 +3422,17 @@ base::-moz-progress-bar,
         animation: progress-bar-stripes 2s linear infinite; } }
 
 .progress-success[value]::-webkit-progress-value {
-    background-color: #5cb85c; }
+    background-color: #18BC9C; }
 
 .progress-success[value]::-moz-progress-bar {
-    background-color: #5cb85c; }
+    background-color: #18BC9C; }
 
 .progress-success[value]::-ms-fill {
-    background-color: #5cb85c; }
+    background-color: #18BC9C; }
 
 @media screen and (min-width: 0\0) {
     .progress-success .progress-bar {
-        background-color: #5cb85c; } }
+        background-color: #18BC9C; } }
 
 .progress-info[value]::-webkit-progress-value {
     background-color: #5bc0de; }
@@ -3535,8 +3535,8 @@ base::-moz-progress-bar,
     z-index: 2;
     color: #fff;
     text-decoration: none;
-    background-color: #5CB85C;
-    border-color: #5CB85C; }
+    background-color: #18BC9C;
+    border-color: #18BC9C; }
 .list-group-item.active .list-group-item-heading,
 .list-group-item.active .list-group-item-heading > small,
 .list-group-item.active .list-group-item-heading > .small, .list-group-item.active:focus .list-group-item-heading,
@@ -4162,14 +4162,14 @@ button.close {
 
 .bg-primary {
     color: #fff !important;
-    background-color: #5CB85C !important; }
+    background-color: #18BC9C !important; }
 
 a.bg-primary:focus, a.bg-primary:hover {
     background-color: #449d44 !important; }
 
 .bg-success {
     color: #fff !important;
-    background-color: #5cb85c !important; }
+    background-color: #18BC9C !important; }
 
 a.bg-success:focus, a.bg-success:hover {
     background-color: #449d44 !important; }
@@ -4531,13 +4531,13 @@ a.text-muted:focus, a.text-muted:hover {
     color: #687077; }
 
 .text-primary {
-    color: #5CB85C !important; }
+    color: #18BC9C !important; }
 
 a.text-primary:focus, a.text-primary:hover {
     color: #449d44; }
 
 .text-success {
-    color: #5cb85c !important; }
+    color: #18BC9C !important; }
 
 a.text-success:focus, a.text-success:hover {
     color: #449d44; }
@@ -4833,7 +4833,7 @@ ul.tag-list li {
     font-size: 1.5rem !important;
     padding-top: 0rem !important;
     margin-right: 2rem !important;
-    color: #5CB85C !important; }
+    color: #18BC9C !important; }
 
 .nav-link .user-pic {
     height: 26px;
@@ -4854,8 +4854,8 @@ ul.tag-list li {
     color: #555; }
 .nav-pills.outline-active .nav-link.active {
     background: #fff !important;
-    border-bottom: 2px solid #5CB85C !important;
-    color: #5CB85C !important; }
+    border-bottom: 2px solid #18BC9C !important;
+    color: #18BC9C !important; }
 
 footer {
     background: #f3f3f3;
@@ -4953,7 +4953,7 @@ footer .attribution {
     font-size: 0.8rem !important; }
 
 .home-page .banner {
-    background: #5CB85C;
+    background: #18BC9C;
     box-shadow: inset 0 8px 8px -8px rgba(0, 0, 0, 0.3), inset 0 -8px 8px -8px rgba(0, 0, 0, 0.3); }
 .home-page .banner p {
     color: #fff;
