--- a/apps/realworld/index.ejs
+++ b/apps/realworld/index.ejs
@@ -7,22 +7,22 @@
         <link href="//fonts.googleapis.com/css?family=Titillium+Web:700|Source+Serif+Pro:400,700|Merriweather+Sans:400,700|Source+Sans+Pro:400,300,600,700,300italic,400italic,600italic,700italic" rel="stylesheet" type="text/css">
         <!-- Import the custom Bootstrap 4 theme from our hosted CDN -->
         <link rel="stylesheet" href="//demo.productionready.io/main.css">
-        <title>RealWorld</title>
+        <title><%= title %></title>
     </head>
-    <body>
+    <%= bodyTag %>
         <script>
             Neo = self.Neo || {}; Neo.config = Neo.config || {};
 
             Object.assign(Neo.config, {
-                appPath         : '/apps/realworld/app.js',
-                basePath        : '../../../../',
-                environment     : 'development',
-                mainThreadAddons: ['LocalStorage', 'Markdown'],
+                appPath         : '<%= appPath %>',
+                basePath        : '<%= basePath %>',
+                environment     : '<%= environment %>',
+                mainThreadAddons: [<%= mainThreadAddons %>],
                 themes          : [],
                 useFontAwesome  : false,
-                workerBasePath  : '../../'
+                workerBasePath  : '<%= workerBasePath %>'
             });
         </script>
-    <script src="../../main.js"></script>
+    <script src="<%= mainPath %>"></script>
     </body>
 </html>
