--- a/libs/home/src/lib/components/tag-list/tag-list.component.html
+++ b/libs/home/src/lib/components/tag-list/tag-list.component.html
@@ -1,12 +1,7 @@
-<p>Popular Tags</p>
+<ng-container *ngIf="tags$ | async as tags">
+  <p>Popular Tags</p>
 
-<div class="tag-list">
-  <a href="" class="tag-pill tag-default">programming</a>
-  <a href="" class="tag-pill tag-default">javascript</a>
-  <a href="" class="tag-pill tag-default">emberjs</a>
-  <a href="" class="tag-pill tag-default">angularjs</a>
-  <a href="" class="tag-pill tag-default">react</a>
-  <a href="" class="tag-pill tag-default">mean</a>
-  <a href="" class="tag-pill tag-default">node</a>
-  <a href="" class="tag-pill tag-default">rails</a>
-</div>
+  <div class="tag-list">
+    <a href="" class="tag-pill tag-default" *ngFor="let tag of tags">{{ tag }}</a>
+  </div>
+</ng-container>
