--- a/apps/conduit/src/app/components/header/header.component.html
+++ b/apps/conduit/src/app/components/header/header.component.html
@@ -7,17 +7,16 @@
         <a class="nav-link active" href="">Home</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="">
-          <i class="ion-compose"></i>&nbsp;New Post
-        </a>
+        <a class="nav-link" href=""> <i class="ion-compose"></i>&nbsp;New Post </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="">
-          <i class="ion-gear-a"></i>&nbsp;Settings
-        </a>
+        <a class="nav-link" href=""> <i class="ion-gear-a"></i>&nbsp;Settings </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="">Sign up</a>
+        <a class="nav-link" [routerLink]="['/login']" routerLinkActive="active">Sign in</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" [routerLink]="['/sign-up']" routerLinkActive="active">Sign up</a>
       </li>
     </ul>
   </div>
