feat: show/hide nav items with loggedIn status

--- a/apps/conduit/src/app/components/header/header.component.html
+++ b/apps/conduit/src/app/components/header/header.component.html
@@ -1,21 +1,24 @@
 <nav class="navbar navbar-light">
   <div class="container">
-    <a class="navbar-brand" href="index.html">conduit</a>
+    <a class="navbar-brand" [routerLink]="['/']">conduit</a>
     <ul class="nav navbar-nav pull-xs-right">
       <li class="nav-item">
         <!-- Add "active" class when you're on that page" -->
-        <a class="nav-link active" href="">Home</a>
+        <a class="nav-link active" [routerLink]="['/home']">Home</a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" href=""> <i class="ion-compose"></i>&nbsp;New Post </a>
+      <li *ngIf="loggedIn$ | async" class="nav-item">
+        <a class="nav-link" href=""> <i class="ion-compose"></i>&nbsp;New Article </a>
       </li>
-      <li class="nav-item">
+      <li *ngIf="loggedIn$ | async" class="nav-item">
         <a class="nav-link" href=""> <i class="ion-gear-a"></i>&nbsp;Settings </a>
       </li>
-      <li class="nav-item">
+      <li *ngIf="loggedIn$ | async" class="nav-item">
+        <span class="nav-link"> {{ username$ | async }} </span>
+      </li>
+      <li *ngIf="loggedOut$ | async" class="nav-item">
         <a class="nav-link" [routerLink]="['/login']" routerLinkActive="active">Sign in</a>
       </li>
-      <li class="nav-item">
+      <li *ngIf="loggedOut$ | async" class="nav-item">
         <a class="nav-link" [routerLink]="['/sign-up']" routerLinkActive="active">Sign up</a>
       </li>
     </ul>
