--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -9,6 +9,8 @@
 .application-name-header {
     color: var(--header-color);
     flex-grow: 1;
+    font-size: 1.5rem;
+    margin-left: 2rem;
 }
 
 .row {
@@ -23,6 +25,8 @@
     box-shadow: inset 0 8px 8px -8px rgba(0,0,0,.3),inset 0 -8px 8px -8px rgba(0,0,0,.3);
     color: white;
     text-align: center;
+    padding: 2rem;
+    font-family: titillium web,sans-serif;
 }
 
 h1 {
