Add article component

--- a/src/components/app/app.css
+++ b/src/components/app/app.css
@@ -5,9 +5,14 @@
 
 .feed {
   width: 75%;
+  display: block;
 }
 
 .side-bar {
   padding: 5px 10px 10px;
   max-width: 25%;
+}
+
+.articles-list {
+  clear: both;
 }
