--- a/src/components/app/app.css
+++ b/src/components/app/app.css
@@ -1,13 +1,25 @@
+:root {
+  --container-padding: 5rem;
+}
+
 .content-container {
   display: flex;
   padding-top: 1em;
+  padding-left: var(--container-padding);
+  padding-right: var(--container-padding);
 }
 
 .feed {
   width: 75%;
+  display: block;
+  flex: 0 0 75%;
 }
 
 .side-bar {
   padding: 5px 10px 10px;
   max-width: 25%;
+}
+
+.articles-list {
+  clear: both;
 }
